# cat-embedding

./: .gitignore  README.md  cat1_another_place.json  metadata.json  pyproject.toml  query.json  requirements-dev.txt  requirements.in  requirements.txt  run.bat  run.sh  test_gallery.npz  test_gallery_clip.npz  test_metadata.json
src/cat_embedding/: __init__.py  __main__.py  embedding.py  embedding_extractor.py  embedding_simple.py  features.py  fuse.py  gallery.py  geo.py  schema.py
tests/: test_geo_integration.py
